<resources>
    <string name="app_name">My Games Wishlist</string>
    <string name="insert">Add Game</string>
    <string name="remove">Remove</string>
    <string name="launch_date">Launch Date</string>
    <string name="developer">Developer</string>
    <string name="name">Name</string>
    <string name="price_example">R$ 10,0</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
</resources>